2003-01-28  Rodrigo Moya <rodrigo@ximian.com>

	* configure.in:
	* api/gda-api.xml:
	* api/gnomedb-api.xml:
	* sources/gtk-sharp.sources:
	* sources/Gda.metadata: added support for latest libgda/libgnomedb.

2003-01-22  Radek Doulik  <rodo@ximian.com>

	* sources/Gtk.metadata: disable default contructor for Frame in
	metadata

	* parser/gapi2xml.pl: add comment to .xml files with warning that
	they were auto generated

2003-01-20  Mike Kestner  <mkestner@speakeasy.net>

	* released 0.7.

2003-01-12  Martin Baulig  <martin@ximian.com>

	* parser/gapi2xml.pl (addNameElem): Make this work if the $cname
	doesn't start with $prefix.

2003-01-10  Duncan Mak  <duncan@ximian.com>

	* gtk/TextView.custom (WindowToBufferCoords): Remove the hack, as
	the generator produces correct code now.

	* sources/Gtk.metadata (GtkTextView): Add a patch from Fredrik
	Nilsson <jymdman@home.se> to add needed 'out' parameters.

2003-01-09  Rodrigo Moya <rodrigo@ximian.com>

	* makefile:
	* configure.in:
	* api/Makefile.in:
	* api/gphoto-api.xml:
	* sources/gtk-sharp.sources:
	* gphoto/Makefile.in:
	* gphoto/.cvsignore: removed gphoto2 bindings, to be moved to mphoto.

2003-01-06  Pedro Abelleira Seco <pedroabelleira@yahoo.es>

	* pango/Layout.custom: Add Size get property and add some nicer overloads
        to avoid explicit passing in the string length

2003-01-05  Pedro Abelleira Seco <pedroabelleira@yahoo.es>

	* gdk/Drawable.custom: Add Size get property

2003-01-05  Duncan Mak  <duncan@ximian.com>

	* pango/GlyphString.custom: Add some nicer overloads to avoid
	explicit passing in the string length.

2003-01-05  Duncan Mak  <duncan@ximian.com>

	* generator/GenBase.cs (AppendCustom): Add #region to code from
	.custom files.

	* generator/*Gen.cs: Add #region markers.

2003-01-05  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata (TextIter.ForwardSearch): Add out param
	(TextIter.BackwardSearch): Add out param here too.

	* sources/Gdk.metadata (Drawable.GetSize): Add out param.