@@ -1008,6 +1008,18 @@
   </data>
 </rule>
 <rule>
+  <class name="GtkWindow">
+    <method>GetPosition</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="type">gint*</filter>
+      <name>pass_as</name>
+      <value>out</value>
+    </attribute>
+  </data>
+</rule>
+z<rule>
   <class name="GtkAdjustment">
     <method>Changed</method>
   </class>
