@@ -13,5 +13,29 @@
     </attribute>
   </data>
 </rule>
+<rule>
+  <class name="PangoLayout">
+    <method>GetSize</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="type">int*</filter>
+      <name>pass_as</name>
+      <value>out</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="PangoLayout">
+    <method>GetPixelSize</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="type">int*</filter>
+      <name>pass_as</name>
+      <value>out</value>
+    </attribute>
+  </data>
+</rule>
 
 </metadata>
