@@ -1,3 +1,9 @@
+2003-01-29  Duncan Mak  <duncan@ximian.com>
+
+	* api/gtk-api.xml:
+	* sources/Gtk.metadata:
+	* sources/Pango.metadata: Add some more metadata rules.
+
 2003-01-28  Rodrigo Moya <rodrigo@ximian.com>
 
 	* configure.in:
